# freshrss-mcp

./: DRAFT-implementation.md  Dockerfile  PLAN-subscribe-unsubscribe-rsshub.md  PLAN-subscribe-unsubscribe.md  README.md  pyproject.toml
src/freshrss_mcp/: client.py  config.py  models.py  routes_matcher.py  server.py  tools.py
tests/: test_client.py  test_routes.py  test_tools.py
