[project]
name = "freshrss-mcp"
version = "0.4.0"
description = "MCP server for FreshRSS — Streamable HTTP transport for OpenClaw integration"
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "fastmcp",
    "httpx",
    "pydantic-settings",
]

[project.scripts]
freshrss-mcp = "freshrss_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/freshrss_mcp"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "respx",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.pydocstyle]
convention = "google"
